<resources>
    <string name="app_name"><html><font color="#6F2DBD">SYE</font></html></string>
    <string name="login">로그인</string>
    <string name="member_btn">회원가입</string>
    <string name="member_btn_f">가입완료</string>
    <string name="test_text">아이디와 비밀번호를 입력하고 로그인하세요</string>
    <string name="id_hint">ID</string>
    <string name="pw_hint">Password</string>
    <string name="name_hint">이름</string>
    <string name="birth_hint">생년월일 ex)19981023</string>
    <string name="phone_hint">핸드폰 번호 ex)01012345678</string>
    <string name="addr_hint">주소</string>
    <string name="gender_man">남성</string>
    <string name="gender_woman">여성</string>
    <string name="write">글쓰기</string>
    <string name="back">뒤로가기</string>
    <string name="check">확인</string>
    <string name="myInfoTitle">내 정보 수정창</string>
    <string name="nameText">이름</string>
    <string name="idText">아이디</string>
    <string name="birthText">생일</string>
    <string name="genderText">성별</string>
    <string name="addrText">주소</string>
    <string name="moblieText">전화번호</string>
</resources>