<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MembershipActivity">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="10dp"
                android:layout_weight="8">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/id_membership"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/button_round_corner"
                    android:hint="@string/id_hint"
                    android:inputType="text"
                    android:maxLength="15" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/button"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_weight="2"
                android:background="@drawable/chargingbutton"
                android:backgroundTint="#FFFFFF"
                android:fontFamily="@font/maplestorylight"
                android:text="@string/check"
                android:textSize="14sp"
                android:textColor="@color/purple"
                android:textStyle="bold" />

        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/purple">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/pw_membership"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/button_round_corner"
                android:hint="@string/pw_hint"
                android:inputType="textPassword"
                android:maxLength="20" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:weightSum="5">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="10dp"
                android:layout_weight="3">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/name_membership"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/button_round_corner"
                    android:hint="@string/name_hint"
                    android:inputType="text"
                    android:maxLength="10" />

            </com.google.android.material.textfield.TextInputLayout>

            <RadioGroup
                android:id="@+id/member_radioGroup"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="2"
                android:orientation="horizontal"
                android:weightSum="2">

                <RadioButton
                    android:id="@+id/member_radioButton1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/gender_man" />

                <RadioButton
                    android:id="@+id/member_radioButton2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/gender_woman" />
            </RadioGroup>

        </LinearLayout>


        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/birth_membership"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/button_round_corner"
                android:hint="@string/birth_hint"
                android:inputType="text"
                android:maxLength="8" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/phone_membership"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/button_round_corner"
                android:hint="@string/phone_hint"
                android:inputType="phone"
                android:maxLength="11"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/addr_membership"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/button_round_corner"
                android:hint="@string/addr_hint"
                android:inputType="text"
                android:maxLength="40" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/member_btn_f"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:background="@drawable/chargingbutton"
            android:backgroundTint="#FFFFFF"
            android:fontFamily="@font/maplestorylight"
            android:text="@string/member_btn_f"
            android:textSize="18sp"
            android:textColor="@color/purple"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>