<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginTop="40dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TableLayout
                android:id="@+id/tableLayout2"
                android:layout_width="65dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="1dp"
                android:layout_marginEnd="1dp"
                android:layout_marginBottom="1dp"
                android:stretchColumns="*" >

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="10dp" >

                    <TextView
                        android:id="@+id/idText"
                        android:layout_width="wrap_content"
                        android:layout_height="60dp"
                        android:layout_gravity="left"
                        android:layout_marginLeft="10dp"
                        android:fontFamily="@font/maplestorybold"
                        android:gravity="center"
                        android:text="@string/idText"
                        android:textColor="#6F2DBD"
                        android:textSize="15sp" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginBottom="10dp" >

                    <TextView
                        android:id="@+id/nameText"
                        android:layout_width="wrap_content"
                        android:layout_height="60dp"
                        android:layout_gravity="left"
                        android:layout_marginLeft="10dp"
                        android:fontFamily="@font/maplestorybold"
                        android:gravity="center"
                        android:text="@string/nameText"
                        android:textColor="#6F2DBD"
                        android:textSize="15sp" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginBottom="10dp" >

                    <TextView
                        android:id="@+id/birthText"
                        android:layout_width="wrap_content"
                        android:layout_height="60dp"
                        android:layout_gravity="left"
                        android:layout_marginLeft="10dp"
                        android:fontFamily="@font/maplestorybold"
                        android:gravity="center"
                        android:text="@string/birthText"
                        android:textColor="#6F2DBD"
                        android:textSize="15sp" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginBottom="10dp" >

                    <TextView
                        android:id="@+id/genderText"
                        android:layout_width="wrap_content"
                        android:layout_height="60dp"
                        android:layout_gravity="left"
                        android:layout_marginLeft="10dp"
                        android:fontFamily="@font/maplestorybold"
                        android:gravity="center"
                        android:text="@string/genderText"
                        android:textColor="#6F2DBD"
                        android:textSize="15sp" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginBottom="10dp" >

                    <TextView
                        android:id="@+id/addrText"
                        android:layout_width="wrap_content"
                        android:layout_height="60dp"
                        android:layout_gravity="left"
                        android:layout_marginLeft="10dp"
                        android:fontFamily="@font/maplestorybold"
                        android:gravity="center"
                        android:text="@string/addrText"
                        android:textColor="#6F2DBD"
                        android:textSize="15sp" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="58dp">

                    <TextView
                        android:id="@+id/moblieText"
                        android:layout_width="wrap_content"
                        android:layout_height="60dp"
                        android:layout_gravity="left"
                        android:layout_marginLeft="10dp"
                        android:fontFamily="@font/maplestorybold"
                        android:gravity="center"
                        android:text="@string/moblieText"
                        android:textColor="#6F2DBD"
                        android:textSize="15sp" />
                </TableRow>
            </TableLayout>

            <TableLayout
                android:id="@+id/tableLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="1dp"
                android:stretchColumns="*" >

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="20dp" >

                    <TextView
                        android:id="@+id/userIDTitle"
                        android:layout_width="232dp"
                        android:layout_height="60dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="10dp"
                        android:background="@drawable/chargingbutton"
                        android:fontFamily="@font/maplestorylight"
                        android:gravity="center"
                        android:textColor="#6F2DBD"
                        android:textSize="15sp" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="20dp" >

                    <EditText
                        android:id="@+id/nameEditText"
                        android:layout_width="232dp"
                        android:layout_height="60dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="10dp"
                        android:background="@drawable/chargingbutton"
                        android:ems="10"
                        android:fontFamily="@font/maplestorylight"
                        android:gravity="center"
                        android:inputType="textPersonName"
                        android:textColor="#6F2DBD"
                        android:textSize="15sp" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="20dp" >

                    <TextView
                        android:id="@+id/birthTitle"
                        android:layout_width="232dp"
                        android:layout_height="60dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="10dp"
                        android:background="@drawable/chargingbutton"
                        android:fontFamily="@font/maplestorylight"
                        android:gravity="center"
                        android:textColor="#6F2DBD"
                        android:textSize="15sp" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="20dp" >

                    <RadioGroup
                        android:id="@+id/radioGroup"
                        android:layout_width="232dp"
                        android:layout_height="60dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="10dp"
                        android:background="@drawable/chargingbutton"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/maleRadioButton"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:checked="true"
                            android:fontFamily="@font/maplestorylight"
                            android:text="@string/gender_man"
                            android:textColor="#6F2DBD" />

                        <RadioButton
                            android:id="@+id/femaleRadioButton"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:fontFamily="@font/maplestorylight"
                            android:text="@string/gender_woman"
                            android:textColor="#6F2DBD" />
                    </RadioGroup>
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="20dp" >

                    <EditText
                        android:id="@+id/addrEditText"
                        android:layout_width="232dp"
                        android:layout_height="60dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="10dp"
                        android:background="@drawable/chargingbutton"
                        android:ems="10"
                        android:fontFamily="@font/maplestorylight"
                        android:gravity="center"
                        android:inputType="textPersonName"
                        android:textColor="#6F2DBD"
                        android:textSize="15sp" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <EditText
                        android:id="@+id/moblieEditText"
                        android:layout_width="232dp"
                        android:layout_height="60dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="10dp"
                        android:background="@drawable/chargingbutton"
                        android:ems="10"
                        android:fontFamily="@font/maplestorylight"
                        android:gravity="center"
                        android:inputType="textPersonName"
                        android:textColor="#6F2DBD"
                        android:textSize="15sp" />
                </TableRow>
            </TableLayout>

        </LinearLayout>

        <Button
            android:id="@+id/modifyButton"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/chargingbutton"
            android:backgroundTint="#FFFFFF"
            android:fontFamily="@font/maplestorylight"
            android:textStyle="bold"
            android:gravity="center"
            android:text="수정하기"
            android:textColor="@color/purple"
            android:textSize="18sp" />

    </LinearLayout>

</LinearLayout>